--- a/src/css/init.less
+++ b/src/css/init.less
@@ -31,12 +31,12 @@ table {border-collapse: collapse; border-spacing: 0;}
 }
 
 .container {
-	max-width: 1235px;
+	max-width: 1080px + 40px;
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 33px;
-	padding-right: 33px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 @media screen and (max-width: 770px) {
