--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -1,7 +1,7 @@
 {% extends 'parts/layout.twig' %}
 
 {% block title %}
-	<title>New Site Title</title>
+	<title>ICEX Media</title>
 {% endblock %}
 
 
