Add text-block and footer

--- a/src/css/blocks/header.less
+++ b/src/css/blocks/header.less
@@ -1,6 +1,8 @@
 .header {
 	padding-top: 41px;
 	padding-bottom: 20px;
+	position: relative;
+	z-index: 20;
 
 	&__container {
 		//max-width: 1080px;
@@ -33,7 +35,7 @@
 		text-decoration: none;
 	}
 	&__login-icon {
-		.svg-icon(icon-login, 10px, 14px);
+		.svg-icon(icon-login, 30px, 42px);
 		margin-right: 11px;
 	}
 	&__login-text {
