--- a/src/css/init.less
+++ b/src/css/init.less
@@ -39,10 +39,13 @@ table {border-collapse: collapse; border-spacing: 0;}
 	padding-right: 20px;
 }
 
-@media screen and (max-width: 770px) {
-	.container {
-
-	}
+.small-container {
+	max-width: 880px + 40px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 body {
