--- a/src/css/main.less
+++ b/src/css/main.less
@@ -7,4 +7,12 @@
 
 
 	//BLOCKS
-	@import "blocks/header.less";
+	@import "blocks/header";
+	@import "blocks/info-box";
+	@import "blocks/footer";
+
+	//MAIN
+	@import "blocks/main/top-block";
+	@import "blocks/main/text-block";
+
+
