--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -6,5 +6,40 @@
 
 
 {% block content %}
+	{#TOP BLOCK#}
+	<div class="top-block">
+		<div class="top-block__inner" style="background-image: url(img/top-block-img.jpg)">
+			<div class="top-block__container container">
 
+			</div>
+		</div>
+	</div>
+	{#/TOP BLOCK#}
+
+	{#TEXT BLOCK#}
+	<div class="text-block">
+		<div class="text-block__container small-container">
+			<h2 class="text-block__title">FORM OF SUCCESS - THE LOGIC OF GROWS</h2>
+			<div class="test-block__divider"></div>
+			<div class="text-block__text">
+				<div class="info-box">
+					<p>Now that everyone is acknowledging the enormous potential of Data, how many people actually know how to easily send the right message or the right ad to the right person at the right time in a predefined and profitable way? The creativity and analytical spirit of marketing decision-makers are often limited by the options offered by today’s technical solutions that are too verticalized, closed or clumsy.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	{#/TEXT BLOCK#}
+
+	{#TEXT BLOCK#}
+	<div class="text-block">
+		<div class="text-block__container small-container">
+			<p class="text-block__subtitle">Your Ads Media DSP provides the technology & the people you need to run programmatic campaigns & reach customized audiences in the moments that matter most</p>
+			<div class="text-block__text">
+				<div class="info-box">
+					<p>Now that everyone is acknowledging the enormous potential of Data, how many people actually know how to easily send the right message or the right ad to the right person at the right time in a predefined and profitable way? The creativity and analytical spirit of marketing decision-makers are often limited by the options offered by today’s technical solutions that are too verticalized, closed or clumsy.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	{#/TEXT BLOCK#}
 {% endblock %}
