--- a/src/css/fonts.less
+++ b/src/css/fonts.less
@@ -1,5 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600&subset=latin-ext');
 
+.light() {
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
+}
 
 .regular() {
 	font-family: 'Montserrat', sans-serif;
