--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -42,4 +42,15 @@
 		</div>
 	</div>
 	{#/TEXT BLOCK#}
+
+	{#CTA BLOCK#}
+	<div class="cta" style="background-image: url(img/cta-bg.jpg)">
+		<div class="cta__container small-container">
+			<h2 class="cta__title">BILD YOUR IDEAL DSP PLATFORM (IN MINUTES)</h2>
+			<div class="cta__link-wrap">
+				<a href="#" class="cta__link">start now</a>
+			</div>
+		</div>
+	</div>
+	{#/CTA BLOCK#}
 {% endblock %}
