Add text-block slider

--- a/src/css/blocks/main/text-block.less
+++ b/src/css/blocks/main/text-block.less
@@ -25,6 +25,9 @@
 	}
 	&__divider {
 		margin-bottom: 55px;
+		.svg-icon(icon-divider, 246px, 13px);
+		margin-left: auto;
+		margin-right: auto;
 	}
 	&__text {
 
