--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -20,7 +20,7 @@
 	<div class="text-block">
 		<div class="text-block__container small-container">
 			<h2 class="text-block__title">FORM OF SUCCESS - THE LOGIC OF GROWS</h2>
-			<div class="test-block__divider"></div>
+			<div class="text-block__divider"></div>
 			<div class="text-block__text">
 				<div class="info-box">
 					<p>Now that everyone is acknowledging the enormous potential of Data, how many people actually know how to easily send the right message or the right ad to the right person at the right time in a predefined and profitable way? The creativity and analytical spirit of marketing decision-makers are often limited by the options offered by today’s technical solutions that are too verticalized, closed or clumsy.</p>
@@ -29,6 +29,131 @@
 		</div>
 	</div>
 	{#/TEXT BLOCK#}
+
+	{#FEATURES SLIDER BLOCK#}
+	<div class="features">
+		<div class="features__container">
+			<div class="features__slider swiper-container" id="features-slider">
+				<div class="features__slider-wrap swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+							<p class="features__slider-item-title">INTEGRATED MARKETING SOLUTION</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">It is easy to start working with YourAdsMedia: we register account for you in the system and help to tune it according to your tasks, you get codes for setting at the site, upload banners, and they start to be shown, and you see the statistics of them</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_online-interface"></div>
+							<p class="features__slider-item-title">
+								CONVENIENT ONLINE INTERFACE
+								<br>
+								(CLOUD MODEL)
+							</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">YourAdsMedia Sites is an online service,
+								you do not have to install or tune anything
+								at you servers, you just receive your login,
+								password, and start work, using a
+								convenient and clear interface</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_management-interface"></div>
+							<p class="features__slider-item-title">
+								COMFORTABLE MANAGEMENT INTERFACE
+								<br>
+								(INCLUDING REAL-TIME REPORTING)
+							</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">Flexible settings of targeting ads, which let distinguish the necessary audience and optimize use of advertising resources of the site</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_cryptocurrency"></div>
+							<p class="features__slider-item-title">
+								RECEIPT AND ACCRUAL OF FUNDS IN
+								<br>
+								CRYPTOCURRENCY
+							</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">There must be some text here</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
+							<p class="features__slider-item-title">INTEGRATED MARKETING SOLUTION</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">It is easy to start working with YourAdsMedia: we register account for you in the system and help to tune it according to your tasks, you get codes for setting at the site, upload banners, and they start to be shown, and you see the statistics of them</div>
+						</div>
+					</div>
+				</div>
+				<div class="features__pagination-wrap">
+					<div class="features__pagination"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	{#/FEATURES SLIDER BLOCK#}
+
+	{#TEXT SLIDER#}
+	<div class="text-slider">
+		<div class="text-slider__image-part" style="background-image: url(img/text-slider-img.jpg)"></div>
+		<div class="text-slider__text-part">
+			<div class="text-slider__slider-itself swiper-container" id="text-slider">
+				<div class="swiper-wrapper">
+					<div class="swiper-slide">
+						<div class="test-slider__slider-item">
+							<h2 class="test-slider__slider-item-title">PUBLISHERS</h2>
+							<div class="test-slider__slider-item-divider"></div>
+							<div class="test-slider__slider-item-text">
+								<div class="info-box">
+									<p>YourAdsMedia views each of our clients equally, regardless of the
+										type of website and hosting you have. Whether your project is
+										already promoted, or up-and-coming, we will generate additional
+										income for you by displaying advertisements to our own clients,
+										and will provide you with advertising traffic from the largest
+										advertising exchanges.
+									</p>
+									<p>Automate the sale of your traffic with RTB-technology (The auction
+										media model, which helped to drive the explosive growth of search
+										marketing, now comes to online display advertising).</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="test-slider__slider-item">
+							<h2 class="test-slider__slider-item-title">PUBLISHERS</h2>
+							<div class="test-slider__slider-item-divider"></div>
+							<div class="test-slider__slider-item-text">
+								<div class="info-box">
+									<p>YourAdsMedia views each of our clients equally, regardless of the
+										type of website and hosting you have. Whether your project is
+										already promoted, or up-and-coming, we will generate additional
+										income for you by displaying advertisements to our own clients,
+										and will provide you with advertising traffic from the largest
+										advertising exchanges.
+									</p>
+									<p>Automate the sale of your traffic with RTB-technology (The auction
+										media model, which helped to drive the explosive growth of search
+										marketing, now comes to online display advertising).</p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="text-slider__slider-pagination-wrap">
+					<div class="text-slider__slider-pagination"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	{#/TEXT SLIDER#}
 
 	{#TEXT BLOCK#}
 	<div class="text-block">
