--- a/src/css/main.less
+++ b/src/css/main.less
@@ -5,6 +5,8 @@
 @import "fonts";
 @import "buttons";
 
+@import "swiper";
+
 
 	//BLOCKS
 	@import "blocks/header";
@@ -15,5 +17,7 @@
 	@import "blocks/main/top-block";
 	@import "blocks/main/text-block";
 	@import "blocks/main/cta";
+	@import "blocks/main/features";
+	@import "blocks/main/text-slider";
 
 
