Add some other blocks

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -19,5 +19,6 @@
 	@import "blocks/main/cta";
 	@import "blocks/main/features";
 	@import "blocks/main/text-slider";
+	@import "blocks/main/image-block";
 
 
