--- a/src/css/blocks/main/text-slider.less
+++ b/src/css/blocks/main/text-slider.less
@@ -1,7 +1,6 @@
 .text-slider {
 	display: flex;
 
-
 	&__image-part {
 		width: 50%;
 		min-width: 50%;
@@ -11,5 +10,66 @@
 		min-width: 50%;
 		padding-top: 131px;
 		padding-bottom: 120px;
+	}
+	&__container {
+		max-width: 1580px / 2;
+	}
+	&__slider-itself {
+
+	}
+	&__slider-wrap {
+		margin-bottom: 88px;
+	}
+	&__slider-item {
+
+	}
+	&__slider-item-title {
+		font-size: @16;
+		.medium();
+		text-align: center;
+		color: #353535;
+		margin-bottom: 20px;
+	}
+	&__slider-item-divider {
+		.svg-icon(icon-divider, 246px, 13px);
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 17px;
+	}
+
+	&__slider-item-text {
+
+	}
+	&__slider-item-text-p {
+		.regular();
+		font-size: @16;
+		line-height: 1.56;
+		text-align: center;
+		color: #8c9398;
+		margin-bottom: 25px;
+		&:last-child {
+			margin-bottom: 0;
+		}
+	}
+	&__slider-pagination-wrap {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	.swiper-pagination-bullet {
+		width: 14px;
+		height: 14px;
+		min-width: 14px;
+		border-radius: 50%;
+		opacity: 1;
+		border: 2px solid #A7A9AC;
+		background: white;
+		margin-right: 11px;
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+	.swiper-pagination-bullet-active {
+		background: #323232;
 	}
 }
