--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -104,56 +104,71 @@
 	<div class="text-slider">
 		<div class="text-slider__image-part" style="background-image: url(img/text-slider-img.jpg)"></div>
 		<div class="text-slider__text-part">
-			<div class="text-slider__slider-itself swiper-container" id="text-slider">
-				<div class="swiper-wrapper">
-					<div class="swiper-slide">
-						<div class="test-slider__slider-item">
-							<h2 class="test-slider__slider-item-title">PUBLISHERS</h2>
-							<div class="test-slider__slider-item-divider"></div>
-							<div class="test-slider__slider-item-text">
-								<div class="info-box">
-									<p>YourAdsMedia views each of our clients equally, regardless of the
+			<div class="text-slider__container">
+				<div class="text-slider__slider-itself swiper-container" id="text-slider">
+					<div class="text-slider__slider-wrap swiper-wrapper">
+						<div class="swiper-slide">
+							<div class="text-slider__slider-item">
+								<h2 class="text-slider__slider-item-title">PUBLISHERS</h2>
+								<div class="text-slider__slider-item-divider"></div>
+								<div class="text-slider__slider-item-text">
+									<p class="text-slider__slider-item-text-p">
+										YourAdsMedia views each of our clients equally, regardless of the
 										type of website and hosting you have. Whether your project is
 										already promoted, or up-and-coming, we will generate additional
 										income for you by displaying advertisements to our own clients,
 										and will provide you with advertising traffic from the largest
 										advertising exchanges.
 									</p>
-									<p>Automate the sale of your traffic with RTB-technology (The auction
+									<p class="text-slider__slider-item-text-p">
+										Automate the sale of your traffic with RTB-technology (The auction
 										media model, which helped to drive the explosive growth of search
-										marketing, now comes to online display advertising).</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="swiper-slide">
-						<div class="test-slider__slider-item">
-							<h2 class="test-slider__slider-item-title">PUBLISHERS</h2>
-							<div class="test-slider__slider-item-divider"></div>
-							<div class="test-slider__slider-item-text">
-								<div class="info-box">
-									<p>YourAdsMedia views each of our clients equally, regardless of the
-										type of website and hosting you have. Whether your project is
-										already promoted, or up-and-coming, we will generate additional
-										income for you by displaying advertisements to our own clients,
-										and will provide you with advertising traffic from the largest
-										advertising exchanges.
+										marketing, now comes to online display advertising).
 									</p>
-									<p>Automate the sale of your traffic with RTB-technology (The auction
-										media model, which helped to drive the explosive growth of search
-										marketing, now comes to online display advertising).</p>
+								</div>
+							</div>
+						</div>
+						<div class="swiper-slide">
+							<div class="test-slider__slider-item">
+								<h2 class="test-slider__slider-item-title">PUBLISHERS</h2>
+								<div class="test-slider__slider-item-divider"></div>
+								<div class="test-slider__slider-item-text">
+									<div class="info-box">
+										<p>YourAdsMedia views each of our clients equally, regardless of the
+											type of website and hosting you have. Whether your project is
+											already promoted, or up-and-coming, we will generate additional
+											income for you by displaying advertisements to our own clients,
+											and will provide you with advertising traffic from the largest
+											advertising exchanges.
+										</p>
+										<p>Automate the sale of your traffic with RTB-technology (The auction
+											media model, which helped to drive the explosive growth of search
+											marketing, now comes to online display advertising).</p>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="text-slider__slider-pagination-wrap">
-					<div class="text-slider__slider-pagination"></div>
+					<div class="text-slider__slider-pagination-wrap">
+						<div class="text-slider__slider-pagination"></div>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	{#/TEXT SLIDER#}
+
+	{#IMAGE BLOCK#}
+	<div class="image-block" style="background-image: url(img/image-block-img.jpg)">
+		<div class="image-block__container container">
+			<div class="image-block__content">
+				<h2 class="image-block__title">MILLIONS OF IMPRESSIONS ARE BOUGHT &
+					SOLD EACH DAY ON OUR EXCHANGE</h2>
+				<h3 class="image-block__subtitle">THAT'S PROGRAMMATIC AT SCALE</h3>
+			</div>
+		</div>
+	</div>
+	{#/IMAGE BLOCK#}
 
 	{#TEXT BLOCK#}
 	<div class="text-block">
