Add responsive for text-block

--- a/src/css/blocks/main/text-block.less
+++ b/src/css/blocks/main/text-block.less
@@ -30,6 +30,34 @@
 		margin-right: auto;
 	}
 	&__text {
+		color: #adafb2;
+		line-height: 1.56;
+		font-size: @16;
+		.regular();
+		text-align: center;
 
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.text-block {
+		padding-top: 20px;
+		padding-bottom: 20px;
+
+		&__title {
+			font-size: @14;
+			margin-bottom: 16px;
+		}
+		&__subtitle {
+			font-size: @14;
+			margin-bottom: 17px;
+		}
+		&__divider {
+			margin-bottom: 11px;
+			.svg-icon(icon-divider, 151px, 8px);
+		}
+		&__text {
+			font-size: @14;
+		}
 	}
 }
