--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -89,6 +89,34 @@
 							<div class="features__slider-item-text">It is easy to start working with YourAdsMedia: we register account for you in the system and help to tune it according to your tasks, you get codes for setting at the site, upload banners, and they start to be shown, and you see the statistics of them</div>
 						</div>
 					</div>
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_online-interface"></div>
+							<p class="features__slider-item-title">
+								CONVENIENT ONLINE INTERFACE
+								<br>
+								(CLOUD MODEL)
+							</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">YourAdsMedia Sites is an online service,
+								you do not have to install or tune anything
+								at you servers, you just receive your login,
+								password, and start work, using a
+								convenient and clear interface</div>
+						</div>
+					</div>
+					<div class="swiper-slide">
+						<div class="features__slider-item">
+							<div class="features__slider-item-icon features__slider-item-icon_management-interface"></div>
+							<p class="features__slider-item-title">
+								COMFORTABLE MANAGEMENT INTERFACE
+								<br>
+								(INCLUDING REAL-TIME REPORTING)
+							</p>
+							<div class="features__slider-item-divider"></div>
+							<div class="features__slider-item-text">Flexible settings of targeting ads, which let distinguish the necessary audience and optimize use of advertising resources of the site</div>
+						</div>
+					</div>
 				</div>
 				<div class="features__pagination-wrap">
 					<div class="features__pagination"></div>
