--- a/src/templates/parts/header.twig
+++ b/src/templates/parts/header.twig
@@ -1,13 +1,32 @@
 {#HEADER#}
 <div class="header">
 	<div class="header__container container">
-		<nav class="header__nav">
+
+
+		{#BURGER#}
+		<div class="header__burger" id="burger">
+			<div class="header__burger-line"></div>
+			<div class="header__burger-line"></div>
+			<div class="header__burger-line"></div>
+		</div>
+		{#/BURGER#}
+
+		{#NAV#}
+		<nav class="header__nav" id="nav">
+			<div class="header__nav-logo-wrap">
+				<a href="/" class="header__nav-logo"></a>
+			</div>
+
+
 			<a href="#" class="header__nav-item">Home</a>
 			<a href="#" class="header__nav-item">Advertisers</a>
 			<a href="#" class="header__nav-item">Publishers</a>
 			<a href="#" class="header__nav-item">Statistic</a>
 			<a href="#" class="header__nav-item">Contact Us</a>
 		</nav>
+		{#/NAV#}
+
+
 		<a href="#" class="header__login">
 			<i class="header__login-icon"></i>
 			<span class="header__login-text">Login</span>
