--- a/src/css/blocks/main/image-block.less
+++ b/src/css/blocks/main/image-block.less
@@ -2,7 +2,7 @@
 	padding-top: 70px;
 	padding-bottom: 73px;
 
-	background-position: center;
+	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 	position: relative;
@@ -44,5 +44,34 @@
 		letter-spacing: 1.8px;
 		text-align: center;
 		color: #ffffff;
+	}
+}
+
+@media screen and (max-width: 800px) {
+	.image-block {
+		background-position: center right;
+
+		&__content {
+			width: 100%;
+		}
+	}
+}
+
+@media screen and (max-width: 650px) {
+	.image-block {
+		padding-top: 35px;
+		padding-bottom: 67px;
+
+		&__container {
+			padding-left: 37px;
+			padding-right: 37px;
+		}
+		&__title    {
+			font-size: @13;
+			margin-bottom: 40px;
+		}
+		&__subtitle {
+			font-size: @12;
+		}
 	}
 }
