--- a/src/css/blocks/main/top-block.less
+++ b/src/css/blocks/main/top-block.less
@@ -36,8 +36,7 @@
 	}
 
 	&__logo {
-		//width: 177px;
-		width: 500px;
+		width: 50%;
 		margin-bottom: 36px;
 	}
 	&__logo-img {
@@ -63,18 +62,59 @@
 		background: #44c8b6;
 		border-radius: 6px;
 		cursor: pointer;
-		transition: all .15s ease-out;
+		transition: background .15s ease-out;
 		box-shadow: 3px 3px 10px 1px rgba(0,0,0,.5);
 
 		.medium();
 		font-size: @13;
 		line-height: 60px;
 		color: white;
+		outline: none;
 
 		&:hover {
 			background: #3f9384;
 			transition-timing-function: ease-in;
 		}
+		&:active {
+			background: #3f9384;
+			transition-timing-function: ease-in;
+			box-shadow: inset 3px 3px 10px 1px rgba(0,0,0,.5);
+			border-bottom-width: 0;
+		}
 
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.top-block {
+		margin-top: -60px;
+		&__container {
+			padding-top: 70px;
+			padding-bottom:  50px;
+		}
+
+		&__logo {
+			width: 70%;
+			margin-bottom: 45px;
+		}
+		&__logo-img {
+			max-width: 100%;
+			min-width: 100%;
+		}
+		&__description {
+			margin-bottom: 118px;
+			font-size: @14;
+			max-width: 90%;
+		}
+		&__get-started {
+			padding: 0 27px;
+			height: 42px;
+			border-bottom: 2px solid #3f9384;
+			background: #44c8b6;
+			border-radius: 4px;
+
+			font-size: @11;
+			line-height: 42px;
+		}
 	}
 }
