--- a/src/css/blocks/main/top-block.less
+++ b/src/css/blocks/main/top-block.less
@@ -59,7 +59,7 @@
 		text-align: center;
 		border: none;
 		border-bottom: 3px solid #3f9384;
-		background: #44c8b6;
+		background: @turquoise-color;
 		border-radius: 6px;
 		cursor: pointer;
 		transition: background .15s ease-out;
@@ -110,7 +110,7 @@
 			padding: 0 27px;
 			height: 42px;
 			border-bottom: 2px solid #3f9384;
-			background: #44c8b6;
+			background: @turquoise-color;
 			border-radius: 4px;
 
 			font-size: @11;
