Add animation on slider items

--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -34,7 +34,7 @@
 			<div class="features__slider swiper-container" id="features-slider">
 				<div class="features__slider-wrap swiper-wrapper">
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item js-detail">
 							<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
 							<p class="features__slider-item-title">INTEGRATED MARKETING SOLUTION</p>
 							<div class="features__slider-item-divider"></div>
@@ -42,7 +42,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item js-detail">
 							<div class="features__slider-item-icon features__slider-item-icon_online-interface"></div>
 							<p class="features__slider-item-title">
 								CONVENIENT ONLINE INTERFACE
@@ -58,7 +58,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item js-detail">
 							<div class="features__slider-item-icon features__slider-item-icon_management-interface"></div>
 							<p class="features__slider-item-title">
 								COMFORTABLE MANAGEMENT INTERFACE
@@ -70,7 +70,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item js-detail">
 							<div class="features__slider-item-icon features__slider-item-icon_cryptocurrency"></div>
 							<p class="features__slider-item-title">
 								RECEIPT AND ACCRUAL OF FUNDS IN
@@ -82,7 +82,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item loaded">
 							<div class="features__slider-item-icon features__slider-item-icon_marketing"></div>
 							<p class="features__slider-item-title">INTEGRATED MARKETING SOLUTION</p>
 							<div class="features__slider-item-divider"></div>
@@ -90,7 +90,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item loaded">
 							<div class="features__slider-item-icon features__slider-item-icon_online-interface"></div>
 							<p class="features__slider-item-title">
 								CONVENIENT ONLINE INTERFACE
@@ -106,7 +106,7 @@
 						</div>
 					</div>
 					<div class="swiper-slide">
-						<div class="features__slider-item">
+						<div class="features__slider-item loaded">
 							<div class="features__slider-item-icon features__slider-item-icon_management-interface"></div>
 							<p class="features__slider-item-title">
 								COMFORTABLE MANAGEMENT INTERFACE
