--- a/src/css/blocks/main/features.less
+++ b/src/css/blocks/main/features.less
@@ -1,5 +1,4 @@
 .features {
-	padding-top: 110px;
 	padding-bottom: 110px;
 
 	&__container {
@@ -14,9 +13,35 @@
 	}
 	&__slider-wrap {
 		margin-bottom: 25px;
+		padding-top: 110px;
 	}
 	&__slider-item {
 
+		opacity: 0;
+		transform: translateY(-100px);
+
+		.swiper-slide:nth-child(1) & {
+			transition: all 1s ease;
+			transition-delay: .5s;
+		}
+		.swiper-slide:nth-child(2) & {
+			transition: all 1s ease;
+			transition-delay: .7s;
+		}
+		.swiper-slide:nth-child(3) &{
+			transition: all 1s ease;
+			transition-delay: .9s;
+		}
+		.swiper-slide:nth-child(4) & {
+			transition: all 1s ease;
+			transition-delay: 1.1s;
+
+		}
+
+		&.loaded {
+			opacity: 1;
+			transform: translateY(0);
+		}
 	}
 	&__slider-item-icon {
 		margin-left: auto;
@@ -91,7 +116,7 @@
 
 @media screen and (max-width: 650px) {
 	.features {
-		padding-top: 27px;
+
 		padding-bottom: 17px;
 
 		&__container {
@@ -101,6 +126,7 @@
 
 		&__slider-wrap {
 			margin-bottom: 22px;
+			padding-top: 27px;
 		}
 
 		&__slider-item-icon {
