--- a/src/css/main.less
+++ b/src/css/main.less
@@ -21,4 +21,10 @@
 	@import "blocks/main/text-slider";
 	@import "blocks/main/image-block";
 
+	//GUEST
+	@import "blocks/guest/guest-publisher";
+	@import "blocks/guest/guest-home";
+	@import "blocks/guest/guest-advertises";
+
+
 
