--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -22,7 +22,9 @@
 	</style>
 
 	<ul>
-		<li><a href="01_main.html">01. Main</a></li>
+		<li><a href="01_guest-home.html">01. Guest home</a></li>
+		<li><a href="02_guest-publisher.html">02. Guest publisher</a></li>
+		<li><a href="03_guest-advertises.html">03. Guest advertises</a></li>
 
 	</ul>
 {% endblock %}
