--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -25,6 +25,7 @@
 		<li><a href="01_guest-home.html">01. Guest home</a></li>
 		<li><a href="02_guest-publisher.html">02. Guest publisher</a></li>
 		<li><a href="03_guest-advertises.html">03. Guest advertises</a></li>
+		<li><a href="04_guest-contact-us.html">04. Guest contact us</a></li>
 
 	</ul>
 {% endblock %}
