--- a/src/css/init.less
+++ b/src/css/init.less
@@ -48,6 +48,13 @@ table {border-collapse: collapse; border-spacing: 0;}
 	padding-right: 20px;
 }
 
+.container-publishers {
+	max-width: 1180px;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 body {
 	min-width: 320px;
 	color: #222;
