--- a/src/css/main.less
+++ b/src/css/main.less
@@ -21,4 +21,8 @@
 	@import "blocks/main/text-slider";
 	@import "blocks/main/image-block";
 
+	//PUBLISHERS
+	@import "blocks/publishers/publishers";
+
+
 
