--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -23,6 +23,7 @@
 
 	<ul>
 		<li><a href="01_main.html">01. Main</a></li>
+		<li><a href="01_publishers.html">01. publishers</a></li>
 
 	</ul>
 {% endblock %}
