--- a/src/css/buttons.less
+++ b/src/css/buttons.less
@@ -1,20 +1,19 @@
 .btn {
 	display: inline-block;
 	vertical-align: top;
-	height: @45;
-	padding: 0 @28;
-	border: 2px solid transparent;
-	border: none;
-	background: #7ed321;
-	border-radius: @3;
-	box-shadow: 0 @9 @34 rgba(31, 29, 38, 0.8);
+	height: 61px;
+	padding: 0 231px;
+	border: 1px solid #4a7c7b;
+	background: #45938d;
+	//border-radius: @3;
+	//box-shadow: 0 @9 @34 rgba(31, 29, 38, 0.8);
 	cursor: pointer;
 	position: relative;
 
 	color: white;
 
 	font-size: @16;
-	line-height: @45;
+	line-height: 66px;
 	text-transform: uppercase;
 	text-decoration: none;
 	overflow: hidden;
@@ -23,7 +22,7 @@
 		background-color: #383542;
 		&:hover {
 			transition: background-color .2s ease;
-			background-color: #7ed321;
+			background-color: #45938d;
 		}
 	}
 	&_big-paddings {
@@ -116,7 +115,7 @@
 				background-color: #383542;
 			}
 			&:active {
-				background-color: #7ed321;
+				background-color: #45938d;
 			}
 		}
 
