--- a/src/css/blocks/guest/guest-reg.less
+++ b/src/css/blocks/guest/guest-reg.less
@@ -1,7 +1,6 @@
-.contact-us {
-	padding-top: 40px;
-	padding-bottom: 85px;
-	min-height: calc(~"100vh - 99px");
+.guest-reg {
+	padding-top: 39px;
+	padding-bottom: 202px;
 
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -26,15 +25,19 @@
 		.guest-title();
 		margin-bottom: 41px;
 	}
+
 	&__content {
 
 		.guest-form__input-holder {
-			width: calc(~"100% - 180px");
+			width: calc(~"100% - 180px - 180px");
 		}
 		.guest-form__textarea-holder {
-			width: calc(~"100% - 180px");
+			width: calc(~"100% - 180px - 180px");
 		}
 		.guest-form__submit-holder {
+			width: calc(~"100% - 180px");
+		}
+		.guest-form__checkbox-holder {
 			width: calc(~"100% - 180px");
 		}
 	}
