--- a/src/css/main.less
+++ b/src/css/main.less
@@ -6,6 +6,7 @@
 @import "buttons";
 
 @import "swiper";
+@import "icheck";
 
 
 	//BLOCKS
@@ -27,6 +28,7 @@
 	@import "blocks/guest/guest-advertises";
 	@import "blocks/guest/contact-us";
 	@import "blocks/guest/guest-form";
+	@import "blocks/guest/guest-reg";
 
 
 
