--- a/src/css/misc.less
+++ b/src/css/misc.less
@@ -12,4 +12,11 @@
 	height: @height;
 }
 
+.guest-title() {
+	font-size: @26;
+	text-align: center;
+	.medium();
+	color: white;
+}
+
 @turquoise-color: #44c8b6;
