--- a/src/templates/01_publishers-new-place.twig
+++ b/src/templates/01_publishers-new-place.twig
@@ -2,7 +2,7 @@
 {% extends 'parts/layout.twig' %}
 
 {% block title %}
-	<title>ICEX Media</title>
+	<title>Publisher New Place</title>
 {% endblock %}
 
 
