--- a/src/css/main.less
+++ b/src/css/main.less
@@ -33,6 +33,7 @@
 	@import "blocks/guest/contact-us";
 	@import "blocks/guest/guest-form";
 	@import "blocks/guest/guest-reg";
+	@import "blocks/guest/guest-login";
 
 
 
